--- a/webpack/scss/main.scss
+++ b/webpack/scss/main.scss
@@ -50,9 +50,8 @@ nav li.active a {
 
 header {
     background: #2a2527;    
-    background-repeat: repeat-x;
-/*    background-size: 500px;*/
-    background-image: url("../img/Flower_music_background.png");
+    background-size: 100% auto;
+    background-image: url("../img/Flower_music_background_banner.png");
 }
 
 header, footer, div.page {
